<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="Change Information Activity"
        android:textColor="	#000000"
        android:textSize="24dp"></TextView>
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:textSize="20sp"
        android:layout_marginTop="20dp"></EditText>
    <EditText
        android:id="@+id/edittext_age"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:hint="@string/age"></EditText>
    <TextView
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:id="@+id/male_female"
        android:hint="@string/male_female"
        android:textSize="20sp"></TextView>
    <EditText
        android:id="@+id/gender"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:hint="@string/gender"></EditText>
    <EditText
        android:id="@+id/edittext_number"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:hint="@string/number"></EditText>
    <Button
        android:id="@+id/datepicker"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:text="Date picker"
        android:hint="@string/date_picker"
        app:layout_constraintBottom_toTopOf="@+id/date_text"
        app:layout_constraintTop_toTopOf="parent" ></Button>
    <TextView
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:id="@+id/date_text"
        android:hint="@string/day_of_birth"
        app:layout_constraintTop_toBottomOf="@+id/show_dialog"
        android:textSize="30sp"></TextView>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"></EditText>


    <Button
        android:id="@+id/updateData"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/updatedata"></Button>


</LinearLayout>